스타일 객체형태로 변경

--- a/content/posts/Communication_001.mdx
+++ b/content/posts/Communication_001.mdx
@@ -81,7 +81,7 @@ thumbnail: /images/2019/29/thumb_default.jpg
 
 > 굿닥은 원링크 사용
 
-<img src="/images/2019/29/4.png" style="width:100%" />
+<img src="/images/2019/29/4.png" style={{width: '100%'}} />
 
 > 제플린의 공유 url
 
@@ -178,7 +178,7 @@ thumbnail: /images/2019/29/thumb_default.jpg
 
 > 어트리뷰션(Attribution): 어떤 행동에 대한 원인을 찾는 과정
 
-<img src="/images/2019/29/6.jpg" style="width:100%" />
+<img src="/images/2019/29/6.jpg" style={{width: '100%'}} />
 
 - 파이어베이스에서는 dynamic Link **Appsflyer**에서는 one Link 라는 명칭으로 불린다.
 - 하나의 URL로 각각의 OS에 맞게 자동으로 앱 내 특정페이지로 이동할 수 있게 해준다.
