--- a/content/posts/Communication_004.mdx
+++ b/content/posts/Communication_004.mdx
@@ -180,7 +180,7 @@ thumbnail: /images/2020/10/thumb_default.jpg
   <summary>
     일반 인구통계 <b>Master</b>
   </summary>
-  <ul style="margin-left: 16px;margin-top:0;">
+  <ul style={{marginLeft: '16px',marginTop: '0'}}>
     <li>이름</li>
     <li>이메일</li>
     <li>성별</li>
@@ -194,7 +194,7 @@ thumbnail: /images/2020/10/thumb_default.jpg
   <summary>
     예측 분석 (군집) <b>attribute</b>
   </summary>
-  <ul style="margin-left: 16px;margin-top:0;">
+  <ul style={{marginLeft: '16px',marginTop: '0'}}>
     <li>구매가능성 : 높음</li>
     <li>행위 기반 군집 : 할인중독자</li>
     <li>제품 기반 군집 : 노트북 컴퓨터 구매자</li>
@@ -207,7 +207,7 @@ thumbnail: /images/2020/10/thumb_default.jpg
   <summary>
     접촉 전략 (매체,채널) <b>attribute</b>
   </summary>
-  <ul style="margin-left: 16px;margin-top:0;">
+  <ul style={{marginLeft: '16px',marginTop: '0'}}>
     <li>선호 채널</li>
     <li>선호 매장</li>
     <li>가장 까가운 매장</li>
@@ -219,7 +219,7 @@ thumbnail: /images/2020/10/thumb_default.jpg
 </details>
 <details>
   <summary>생애주기 군집 값( enum같은 )</summary>
-  <ul style="margin-left: 16px;margin-top:0;">
+  <ul style={{marginLeft: '16px',marginTop: '0'}}>
     <li>예상 고객</li>
     <li>신규 고객</li>
     <li>반복 고객</li>
@@ -233,7 +233,7 @@ thumbnail: /images/2020/10/thumb_default.jpg
   <summary>
     구매 데이터 분석 <b>attribute</b>
   </summary>
-  <ul style="margin-left: 16px;margin-top:0;">
+  <ul style={{marginLeft: '16px',marginTop: '0'}}>
     <li>평생 매출 (예: 2007달러)</li>
     <li>평생 마진 (예: 576달러)</li>
     <li>평생 주문 수</li>
@@ -250,7 +250,7 @@ thumbnail: /images/2020/10/thumb_default.jpg
   <summary>
     행위 <b>behavior</b>
   </summary>
-  <ul style="margin-left: 16px;margin-top:0;">
+  <ul style={{marginLeft: '16px',marginTop: '0'}}>
     <li>마지막 주문 날짜</li>
     <li>마지막 주문 채널</li>
     <li>마지막 주문 매출</li>
@@ -289,7 +289,7 @@ thumbnail: /images/2020/10/thumb_default.jpg
 
 <details>
   <summary>판매</summary>
-  <ol style="margin-left: 16px;margin-top:0;">
+    <ol style={{marginLeft: '16px',marginTop: '0'}}>
     <li>매달 얼마나 많은 신규고객을 획득?</li>
     <li>신규고객을 획득하는 데 드는 비용은 얼마?</li>
     <li>고객당 매출액은 얼마? 추세는 어떠함?</li>
@@ -308,9 +308,9 @@ thumbnail: /images/2020/10/thumb_default.jpg
 <details>
   <summary>고객</summary>
   
-  <details style="padding-left: 16px;">
+  <details style={{paddingLeft: '16px'}}>
     <summary>제품기반 군집</summary>
-    <ol style="margin-left: 16px;margin-top:0;">
+    <ol style={{marginLeft: '16px',marginTop: '0'}}>
       <li>각 제품 기반 군집에는 몇 명의 고객이 있는가?</li>
       <li>제품 기반 군집의 각 구성원은 어느정도의 가치가 있는가?</li>
       <li>가장 많은 <b>매출</b>을 올리는 제품 기반 군집은 어느것인가?</li>
@@ -319,9 +319,9 @@ thumbnail: /images/2020/10/thumb_default.jpg
     </ol>
   </details>
 
-<details style="padding-left: 16px;">
+<details style={{paddingLeft: '16px'}}>
   <summary>브랜드 기반 군집</summary>
-  <ol style="margin-left: 16px;margin-top:0;">
+  <ol style={{marginLeft: '16px',marginTop: '0'}}>
     <li>각 브랜드 기반 군집에는 몇명의 고객이 있는가?</li>
     <li>각 브랜드 기반 군집의 각 구성원은 어느정도의 가치가 있는가?</li>
     <li>가장 많은 매출을 올리는 브랜드 기반 군집은 어느것인가?</li>
@@ -330,9 +330,9 @@ thumbnail: /images/2020/10/thumb_default.jpg
   </ol>
 </details>
 
-<details style="padding-left: 16px;">
+<details style={{paddingLeft: '16px'}}>
   <summary>행위기반 군집</summary>
-  <ol style="margin-left: 16px;margin-top:0;">
+  <ol style={{marginLeft: '16px',marginTop: '0'}}>
     <li>각 행위 기반 군집에는 몇 명의 고객이 있는가?</li>
     <li>행위 기반 군집의 각 구성원은 어느 정도의 가치가 있는가?</li>
     <li>가장 많은 매출을 올리는 행위기반 군집은 무엇인가?</li>
@@ -348,9 +348,9 @@ thumbnail: /images/2020/10/thumb_default.jpg
   </ol>
 </details>
 
-<details style="padding-left: 16px;">
+<details style={{paddingLeft: '16px'}}>
   <summary>평생가치</summary>
-  <ol style="margin-left: 16px;margin-top:0;">
+  <ol style={{marginLeft: '16px',marginTop: '0'}}>
     <li>가장 높은 가치의 고객은 누구인가?</li>
     <li>최상위 10% 고객의 (예상) 평생가치는 얼마인가?</li>
     <li>
@@ -374,9 +374,9 @@ thumbnail: /images/2020/10/thumb_default.jpg
   </ol>
 </details>
 
-<details style="padding-left: 16px;">
+<details style={{paddingLeft: '16px'}}>
   <summary>구매가능성</summary>
-  <ol style="margin-left: 16px;margin-top:0;">
+  <ol style={{marginLeft: '16px',marginTop: '0'}}>
     <li>무료 배송 서비스의 제공은 매출(및 마진)에 어떤 영향을 미치는가?</li>
     <li>할인이 판매 증가를 촉진했는가?</li>
     <li>프로모션 비용을 고려할 때 할인이 마진 증가를 촉진했는가?</li>
@@ -387,9 +387,9 @@ thumbnail: /images/2020/10/thumb_default.jpg
   </ol>
 </details>
 
-<details style="padding-left: 16px;">
+<details style={{paddingLeft: '16px'}}>
   <summary>생애주기 단계</summary>
-  <ol style="margin-left: 16px;margin-top:0;">
+  <ol style={{marginLeft: '16px',marginTop: '0'}}>
     <li>활성고객 (지난 12개월 동안 구매한적이 있는 고객)은 몇명인가?</li>
     <li>기간이 경과한 고객은 몇 명인가?</li>
     <li>매출 및 마진의 대부분을 신규고객이 차지하는가 아니면 반복 고객이 차지하는가?</li>
@@ -411,18 +411,18 @@ thumbnail: /images/2020/10/thumb_default.jpg
   </ol>
 </details>
 
-<details style="padding-left: 16px;">
+<details style={{paddingLeft: '16px'}}>
   <summary>인구사회학적 특징</summary>
-  <ol style="margin-left: 16px;margin-top:0;">
+  <ol style={{marginLeft: '16px',marginTop: '0'}}>
     <li>우리로부터 구매한 가구수는 얼마나 되는가?</li>
     <li>성별에 따른 평균 주문 금액은 얼마인가?</li>
     <li>고객별(세그먼트별)로 가장 가까운 매장까지의 거리는 얼마인가?</li>
   </ol>
 </details>
 
-<details style="padding-left: 16px;">
+<details style={{paddingLeft: '16px'}}>
   <summary>제품추천</summary>
-  <ol style="margin-left: 16px;margin-top:0;">
+  <ol style={{marginLeft: '16px',marginTop: '0'}}>
     <li>고객별로 다음에는 어떤 제품을 추천해야 하는가?</li>
     <li>각 고객별로 핵심적인 채널은 어느 것인가?</li>
   </ol>
@@ -431,7 +431,7 @@ thumbnail: /images/2020/10/thumb_default.jpg
 </details>
 <details>
   <summary>마케팅/채널</summary>
-  <ol style="margin-left: 16px;margin-top:0;">
+  <ol style={{marginLeft: '16px',marginTop: '0'}}>
     <li>매월 몇 개의 장바구니가 매출로 이어지지 않고, 중도에서 포기되고 있는가?</li>
     <li>매월 몇 개의 웹 검색이 매출로 이어지지 않고 중도에서 포기되고 있는가?</li>
     <li>이메일 1개당 매출은 얼마이며, 시간 경과에 따라 어떻게 변화하는가?</li>
@@ -453,7 +453,7 @@ thumbnail: /images/2020/10/thumb_default.jpg
 </details>
 <details>
   <summary>제품</summary>
-  <ol style="margin-left: 16px;margin-top:0;">
+  <ol style={{marginLeft: '16px',marginTop: '0'}}>
     <li>제품 카테고리별 매출 및 마진은 어떠한가?</li>
     <li>제품 소개 캠페인으로 타겟팅할 수 있는 사람들은 얼마나 되는가?</li>
     <li>가장 실적이 좋은 제품 카테고리는 무엇인가?</li>
