--- a/content/posts/FP_01.mdx
+++ b/content/posts/FP_01.mdx
@@ -322,7 +322,7 @@ console.log(myCalculate2.memoization(1));
 console.log(myCalculate2.memoization(2));
 ```
 
-<img src="/images/2018/40/2.jpg" style="width:100%" />
+<img src="/images/2018/40/2.jpg" style={{width:"100%"}} />
 
 ---
 
