--- a/content/posts/Git_01.mdx
+++ b/content/posts/Git_01.mdx
@@ -188,7 +188,7 @@ url = git@github.com:feel5ny/submodule_child.git
 깃 크라켄이라는 git client app을 사용하고 있는데, 해당 옵션에도 추가된 것을 확인할 수 있다.
 
 <img src="/images/2019/04/01.png" />
-<img src="/images/2019/04/02.png" style="width:250px" />
+<img src="/images/2019/04/02.png" style={{width: '250px'}} />
 
 ```ts
 import * as React from "react";
