--- a/content/posts/HTTP_003_03.mdx
+++ b/content/posts/HTTP_003_03.mdx
@@ -95,7 +95,7 @@ thumbnail: /images/2019/22/thumb_default.jpg
 
 <img
   src="https://camo.githubusercontent.com/4e15cccf2a9277dcca2c8824092547dee7058744/68747470733a2f2f7261776769746875622e636f6d2f666f722d4745542f687474702d6465636973696f6e2d6469616772616d2f6d61737465722f6874747064642e706e67"
-  style="width:100%"
+  style={{width: '100%'}}
 />
 
 [출처: http-decision-diagram](https://github.com/for-GET/http-decision-diagram)
@@ -293,7 +293,7 @@ Connection: Upgrade
   금지되므로 대신 **307 임시 리디렉션**을 사용하는 것이 좋다.
 - 사용된 메서드를 `GET`로 변경하려는 경우 대신 **303 "기타"**를 사용해야 한다.
 
-<img src="/images/2019/22/03.png" style="width:100%" />
+<img src="/images/2019/22/03.png" style={{width: '100%'}} />
 
 ### 303 - See Other
 
