--- a/content/posts/HTTP_005.mdx
+++ b/content/posts/HTTP_005.mdx
@@ -150,7 +150,7 @@ node.js로 간단 웹서버를 구현해 보았다. % github feel5ny httpStudy
 
 공통적으로는 아래 그림에서 하는 일을 한다.
 
-<img src="/images/2019/26/01.jpg" style="width:100%" />
+<img src="/images/2019/26/01.jpg" style={{width: '100%'}} />
 
 1. 커넥션을 맺는다.
 
@@ -219,7 +219,7 @@ node.js로 간단 웹서버를 구현해 보았다. % github feel5ny httpStudy
 
 아래는 어떻게 ident 프로토콜이 동작하는지 보여준다.
 
-<img src="/images/2019/26/02.png" style="width:100%" />
+<img src="/images/2019/26/02.png" style={{width: '100%'}} />
 
 - 만약 클라가 ident 프로토콜을 지원한다면, 클라는 ident 결과를 위해 TCP port 113번을 listen한다.
 
@@ -441,7 +441,7 @@ https://feel5ny.github.io/.../
   - 확장자에 따라 mime타입을 결정한다.
     [확장자별 mime타입 - mdn](https://developer.mozilla.org/ko/docs/Web/HTTP/Basics_of_HTTP/MIME_types/Complete_list_of_MIME_types)
 
-<img src="/images/2019/26/09.png" style="width:100%" />
+<img src="/images/2019/26/09.png" style={{width: '100%'}} />
 
 ### 5.2.2 매직 타이핑 Magic typing
 
