--- a/content/posts/HTTP_006.mdx
+++ b/content/posts/HTTP_006.mdx
@@ -261,7 +261,7 @@ function FindProxyForURL(url, host) {
 
 웹 프록시 자동 발견 프로토콜 Web Proxy Auto-Discovery Protocol
 
-<img src="/images/2019/28/01.png" style="width:100%" />
+<img src="/images/2019/28/01.png" style={{width: '100%'}} />
 
 - 브라우저에게 알맞은 PAC 파일을 자동으로 찾아주는 알고리즘이다.
 - WPAD 프로토콜이 구현된 클라가 하게 될 일은
