--- a/content/posts/HTTP_013_01.mdx
+++ b/content/posts/HTTP_013_01.mdx
@@ -85,15 +85,15 @@ thumbnail: /images/2019/42/thumb_default.jpg
 
 ## TL;DR
 
-<img src="/images/2019/42/02.png" style="width:100%" />
+<img src="/images/2019/42/02.png" style={{width: '100%'}} />
 
 ---
 
 자세히.......
 
-<img src="/images/2019/42/03.png" style="width:100%" />
-<img src="/images/2019/42/04.png" style="width:100%" />
-<img src="/images/2019/42/05.png" style="width:100%" />
+<img src="/images/2019/42/03.png" style={{width: '100%'}} />
+<img src="/images/2019/42/04.png" style={{width: '100%'}} />
+<img src="/images/2019/42/05.png" style={{width: '100%'}} />
 
 - 다이제스트 인증은 그다지 사용되고 있지 않다.
 
@@ -108,7 +108,7 @@ thumbnail: /images/2019/42/thumb_default.jpg
 - 구현하기에 따라서, 메세지 내용 위조를 막는것도 가능하다.
 - 그 외 잘 알려진 형태의 공격을 막는다.
 
-<img src="/images/2019/42/01.png" style="width:100%" />
+<img src="/images/2019/42/01.png" style={{width: '100%'}} />
 
 ---
 
@@ -177,7 +177,7 @@ thumbnail: /images/2019/42/thumb_default.jpg
       버전의 인증이다.
 - 다이제스트 인증의 3단계 핸드셰이크를 보자
 
-<img src="/images/2019/42/02.png" style="width:100%" />
+<img src="/images/2019/42/02.png" style={{width: '100%'}} />
 
 1. 1단계
 
@@ -413,7 +413,7 @@ BASE64(time-stamp H(time-stamp ":" ETag ":" secret-data))
   제공함으로써 가능해진다.
 - 이후 서버는 이 요약을 Authentication-Info 헤더를 통해 클라에 전달한다.
 
-<img src="/images/2019/42/05.png" style="width:100%" />
+<img src="/images/2019/42/05.png" style={{width: '100%'}} />
 
 ---
 
