--- a/content/posts/HTTP_013_02.mdx
+++ b/content/posts/HTTP_013_02.mdx
@@ -64,7 +64,7 @@ thumbnail: /images/2019/43/thumb_default.jpg
 
 ## 1.1 다중 인증 요구 `qop`
 
-<img src="/images/2019/43/01.png" style="width:100%" />
+<img src="/images/2019/43/01.png" style={{width: '100%'}} />
 
 - 서버는 한 리소스에 대해 여러 인증을 요구할 수 있다.
 - 보통은 WWW-Authenticate에 qop필드에 쉼표로 구분하여 인증방법을 보내준다.
@@ -81,11 +81,11 @@ thumbnail: /images/2019/43/thumb_default.jpg
 - URI 지시자가 가리키는 리소스가 요청줄에 명시된 리소스와 같음을 확인해야한다. (중간 프락시가 변조할
   수도 있음)
   - 요청줄에 명시된 리소스는 domain필드에 같이 명시해준다.
-    <img src="/images/2019/43/02.png" style="width:100%" />
+    <img src="/images/2019/43/02.png" style={{width: '100%'}} />
 
 ## 1.3 보호 공간 realm
 
-<img src="/images/2019/43/03.png" style="width:100%" />
+<img src="/images/2019/43/03.png" style={{width: '100%'}} />
 
 - 영역 값은, 접근한 서버의 루트 URL과 결합하여, 보호 공간을 정의한다.
 - 영역은 보호 영역의 집합으로 분할할 수 있도록 해준다. (보호 영역으로 따로 구분해둔다..)
