--- a/content/posts/JS_19.mdx
+++ b/content/posts/JS_19.mdx
@@ -270,7 +270,7 @@ while (arr.length > 0) {
 
 #### 정리
 
-<div style="padding:20px; background-color:rgba(0,0,0,0.2)">
+<div style={{padding: '20px', backgroundColor: 'rgba(0,0,0,0.2)'}}>
   1. 반복자체를 하지는 않지만 (: iterator 객체와 next객체가 반복하진 않지만.)
   2. 외부에서 반복을 하려고 할 때
     3. 반복에 필요한 조건과 실행을 
