--- a/content/posts/JS_25_1.mdx
+++ b/content/posts/JS_25_1.mdx
@@ -124,7 +124,7 @@ thumbnail: /images/2019/34/thumb_default.jpg
 자바스크립트의 ECMAScript를 알아보기전에 우리는 프론트 개발자로써 어느 과정까지 건드리고 있는지를
 알아보고, ECMAScript에 조금 더 집중할 수 있는 상황에 대해서 알아본다.
 
-<img src="/images/2019/34/01.png" style="width:100%" />
+<img src="/images/2019/34/01.png" style={{width: '100%'}} />
 
 1. **Code**
 
