--- a/content/posts/JS_25_2.mdx
+++ b/content/posts/JS_25_2.mdx
@@ -96,7 +96,7 @@ thumbnail: /images/2019/35/thumb_default.jpg
 
 ## Program & Timing
 
-<img src="/images/2019/35/01.png" style="width:100%" />
+<img src="/images/2019/35/01.png" style={{width: '100%'}} />
 
 1. Language code
 2. Machine language로 트랜스파일한다.
