--- a/content/posts/JS_26_1.mdx
+++ b/content/posts/JS_26_1.mdx
@@ -153,7 +153,7 @@ thumbnail: /images/2019/36/thumb_default.jpg
 
 자바스크립트 엔진을 **동시성 모델**로 표현해보자.
 
-<img src="/images/2019/36/02.jpg" style="width:100%" />
+<img src="/images/2019/36/02.jpg" style={{width: '100%'}} />
 
 1. engine work: 브라우저 엔진은 초기 작업을 진행한다.
 
@@ -213,7 +213,7 @@ thumbnail: /images/2019/36/thumb_default.jpg
 - 멀티 스레드 문제도 synchronized문제가 생기기때문에 콜백 큐처럼 guard를 두어서 guard가 처리하게끔
   설계함.
 
-  <img src="/images/2019/36/04.jpg" style="width:100%" />
+  <img src="/images/2019/36/04.jpg" style={{width: '100%'}} />
 
 ---
 
