--- a/content/posts/JS_26_2.mdx
+++ b/content/posts/JS_26_2.mdx
@@ -186,11 +186,11 @@ timeout(_ => console.log('hello'), 1000);
 
 **방금 구현한 setTimer를 동시성 모델로 구현해보면?**
 
-<img src="/images/2019/37/01.jpg" style="width: 100%" />
+<img src="/images/2019/37/01.jpg" style={{width: '100%'}} />
 
 **좀더 큰 그림에서 보면?**
 
-<img src="/images/2019/37/02.jpg" style="width: 100%" />
+<img src="/images/2019/37/02.jpg" style={{width: '100%'}} />
 
 - 동시성을 만들어내는 이벤트 루프 안에 작은 이벤트 루프를 만들어낸 것.
 
