--- a/content/posts/Joylog_003.mdx
+++ b/content/posts/Joylog_003.mdx
@@ -222,7 +222,7 @@ thumbnail: /images/2019/17/thumb_default.jpg
 
 ### 2.1.5 이상한 모임 번역 (실패인가 아닌가)
 
-<img src="/images/2019/17/09.png" style="width: 100px" />
+<img src="/images/2019/17/09.png" style={{width: '100px'}} />
 
 이모에서 번역팀을 모집해서 참여했다. 나름 테스트 번역도 통과해서 비개발 번역팀에 속하게 되었고, 첫
 번째 번역은
