--- a/content/posts/Joylog_004.mdx
+++ b/content/posts/Joylog_004.mdx
@@ -292,7 +292,7 @@ http완벽가이드 스터디와 스터디원도 겹치고, 일정도 겹치는 
 그래도 제너레이터를 왜 사용해야 하는지, 넌블럭킹에 대한 개념 등을 알 수 있어서 좋긴 했지만 아직
 3개의 강의를 복습하지 못했다.. 올해 가기 전에 해야 하눈데!! ㅠ
 
-<img src="/images/2019/46/04.png" style="width:100%" />
+<img src="/images/2019/46/04.png" style={{width: '100%'}} />
 
 저번 회고 글에서도 작성했지만, **실습 위주로 복습해야 진짜 내 것이 될 텐데** 자꾸 코드스피츠 수업은
 그것을 못 하게 된다ㅠ 리소스 부족도 사치겠지.. 복습하고 꼬옥 실습을 진행하자.
@@ -373,7 +373,7 @@ http완벽가이드 스터디와 스터디원도 겹치고, 일정도 겹치는 
 😅 이번에는 1번에 굉장히 쏠려버렸다. **삽질한 업무**들이 많아서 개인적으로 글감을 정리하고 있었는데,
 너무 스터디 글만 올리는 것 같다고 인지될 때마다 글감에서 꺼내서 작성하였다.
 
-<img src="/images/2019/46/06.png" style="width:100%" />
+<img src="/images/2019/46/06.png" style={{width: '100%'}} />
 
 그나마 2개..ㅎㅎ 세미나 다녀와서 글 쓰는 건.. 정말 손에 안 잡히나보다 😂😂 HTML 컨퍼런스랑 구글
 SEO는 작성해야 하는데 :( 스터디 끝나면 글감에 있는 글 하나씩 꺼내서 작성하자!
