--- a/content/posts/OOP_05.mdx
+++ b/content/posts/OOP_05.mdx
@@ -299,7 +299,7 @@ const textNode = (input: string, cursor: number, curr: StackItem): number => {
 2. 닫는태그
 3. 완료태그
 
-<img src="/images/2018/36/03.png" style="width: 100px" />
+<img src="/images/2018/36/03.png" style={{width: '100px'}} />
 
 - **공통점** 시작태그로 시작해서 닫는태그로 끝난다.
 
