--- a/content/posts/OOP_08_2.mdx
+++ b/content/posts/OOP_08_2.mdx
@@ -313,9 +313,9 @@ const Game = (_ => {
 배열을 루프돌아서 각각의 줄을 td를 갖는 tr로 바꿔서 table에 넣고 싶음.
 
 - td를 갖는 tr로
-  <img src="/images/2019/12/04.png" style="width:20rem;" />
+  <img src="/images/2019/12/04.png" style={{width: '20rem'}} />
 - 각각의 줄을 (td를 갖는) tr로 바꿔서
-  <img src="/images/2019/12/03.png" style="width:20rem;" />
+  <img src="/images/2019/12/03.png" style={{width: '20rem'}} />
 
 ---
 
