--- a/content/posts/dada_02week.mdx
+++ b/content/posts/dada_02week.mdx
@@ -47,7 +47,7 @@ Github [+](https://github.com/huusz/Da-Da)
 ### 깃헙 셋팅
 
 - 깃헙 레포에는 백엔드, 프론트엔드 폴더를 초반에 나누어서 진행하였다.
-  - <span style="color:white">**troubleShoot**</span>
+  - <span style={{color: 'white'}}>**troubleShoot**</span>
     위험 상황을 피하는 차원에서 백엔드와 프론트엔드는 레포를 따로 생성하는게 좋다고 하셨음.
 - 처음 시작 시에는 master브랜치에서 브랜치를 각자 생성하여 진행, 풀리케스트 없이 바로 바로 merge하며
   진행. (지금 생각하니 헉;)
@@ -58,7 +58,7 @@ Github [+](https://github.com/huusz/Da-Da)
 <img src = "/images/post_img/06/01.png" />
 > 퍼블리싱 끝나고 merge 후
 
-- <span style="color:white">**troubleShoot**</span>
+- <span style={{color: 'white'}}>**troubleShoot**</span>
   위의 이미지는 1주일만에 merge한 상황. merge는 자주자주 하는게 좋다.
 
 ---
@@ -89,13 +89,13 @@ Github [+](https://github.com/huusz/Da-Da)
 
 ---
 
-<span style="color:white">**Tip**</span>- 깃헙 프로젝트에서 카드를 이슈로 만들면, 이슈탭에도 자동
+<span style={{color: 'white'}}>**Tip**</span>- 깃헙 프로젝트에서 카드를 이슈로 만들면, 이슈탭에도 자동
 등록 가능하다. - 해당 이슈의 커밋이 진행 될 경우, 커밋 메세지에 이슈 number와 명령어를 추가하면
 이슈가 자동으로 close나 등등의 작업이 자동화되면서, 이슈에도 log가 남는다. - Close: `close`,
 `closes`, `closed`, `fix`, `fixes`, `fixed`, `resolve`, `resolves`, `resolved` - Reopen: `reopen`,
 `reopens`, `reopened`
 
-<span style="color:white">**Issue**</span>- slack notation을 걸어놓지 않아서 이메일로 확인해야했다.
+<span style={{color: 'white'}}>**Issue**</span>- slack notation을 걸어놓지 않아서 이메일로 확인해야했다.
 - 카드를 close로 옮겨야하는 번거로움이 있었다. (지라같은 툴은 옮기지 이슈가 닫히면 자동으로 옮기짐)
 
 ---
@@ -135,7 +135,7 @@ component를 함께 두었다.
 핫한 스타일드 컴포넌트를 쓸까 인라인 스타일로 작업을 할까 고민했었다. 지금 생각해보면 과감하게
 쓸껄...이라고 생각이 든다. 러닝커브가 있을 듯 하여 `인라인 스타일`로 작업하게 되었다.
 
-<span style="color:white">**Issue**</span>
+<span style={{color: 'white'}}>**Issue**</span>
 인라인스타일로 작업하다보니 `:hover`, `:before`, `:after`과 같은 셀렉터를 사용하지 못했고, css를
 부분 부분 섞어 쓰게 되었다. 스타일드 컴포넌트는 이를 해결해주는데.. 그냥 쓸껄!
 
