--- a/content/posts/interaction_01.mdx
+++ b/content/posts/interaction_01.mdx
@@ -124,7 +124,7 @@ https://www.youtube.com/watch?v=5XMUJdjI0L8&ab_channel=hernantorrisi
 
 hexo블로그에 셋팅할 경우 파일은 아래 경로로 옮깁니다. `themes > hueman > source > js`
 
-<img src="/images/2018/07/02.png" width="200px" style="margin: 0;" />
+<img src="/images/2018/07/02.png" width="200px" style={{margin: '0'}} />
 
 **필요한 파일**
 
