--- a/content/posts/mediaQuery_01.mdx
+++ b/content/posts/mediaQuery_01.mdx
@@ -17,7 +17,7 @@ enableComment: true
 thumbnail: /images/2018/11/thumb_default.jpg
 ---
 
-<div style="padding: 0px 40px 20px 40px;background: #cbd3da22;margin-top:20px">
+<div style={{padding: '0px 40px 20px 40px', background: '#cbd3da22', marginTop: '20px'}}>
   **목차** &#128075;&#128075;
 
   0. 서론
@@ -124,9 +124,9 @@ device width와 height, -webkit-min-device-pixel-ratio를 구할 수 있었다. 
 
 <img src="/images/2018/11/image.png" />
 
-<img style="border-radius: 6px;" src="/images/2018/11/image02.png" />
+<img style={{borderRadius: '6px'}} src="/images/2018/11/image02.png" />
 
-### <u style="background: #222222;color: white;padding: 10px 20px;">**5.3인치 1280\*720, 294ppi**</u>
+### <u style={{background: '#222222', color: 'white', padding: '10px 20px'}}>**5.3인치 1280\*720, 294ppi**</u>
 
 @media only screen and (`device-width: ?px`) and (`device-height: ?px`) and
 (`-webkit-device-pixel-ratio: ?`) {}
