--- a/content/posts/principle_01.mdx
+++ b/content/posts/principle_01.mdx
@@ -33,7 +33,7 @@ thumbnail: /images/2018/25/thumb_default.jpg
 새로운 요구사항이 생긴다. 4. **비가시성** : 추상화해서 단순한 도면으로 만드는 작업은 가능하나,
 이때의 정보가 사상되므로 모든 정보를 표현할 수 없다.
 
-### \*HOW\_<span style="color:white">역사를 배워 복잡함에 맞선다.</span>
+### \*HOW\_<span style={{color: 'white'}}>역사를 배워 복잡함에 맞선다.</span>
 
 소프트웨어 개발의 역사는 복잡함과 투쟁의 역사.
 
