--- a/content/posts/rendering_engine_0.mdx
+++ b/content/posts/rendering_engine_0.mdx
@@ -98,7 +98,7 @@ thumbnail: /images/2018/13/thumb_default.jpg
 
 렌더링 엔진은
 
-<div style="padding: 1em;background-color: lightyellow;">
+<div style={{padding: '1em', backgroundColor: 'lightyellow'}}>
   1. [HTML 파싱](#html_parse) (for DOM트리 구축) 2. [렌더 트리 **구축**](#setting) 3. [렌더 트리
   **배치**](#layout) 4. [렌더 트리 **그리기**](#draw)
 </div>
@@ -109,7 +109,7 @@ thumbnail: /images/2018/13/thumb_default.jpg
 
 #### 3-2-1. 웹킷
 
-<img src="/images/2018/13/webkit_logo.png" width="300" style="margin:0;" />
+<img src="/images/2018/13/webkit_logo.png" width="300" style={{margin: '0'}} />
 <img src="/images/2018/13/webkit.png" />
 
 - 렌더트리 (렌더객체로 구성)
@@ -119,7 +119,7 @@ thumbnail: /images/2018/13/thumb_default.jpg
 
 #### 3-2-2. 게코
 
-<img src="/images/2018/13/gecko-logo.gif" width="100" style="margin:0;" />
+<img src="/images/2018/13/gecko-logo.gif" width="100" style={{margin: '0'}} />
 <img src="/images/2018/13/gecko.png" />- 형상트리(frame tree) : 시각적으로 처리되는 렌더 트리 -
 형상(frame) : 형상 - 배치라는 뜻으로 리플로(`reflow`)라는 용어를 사용 - 콘텐츠 싱크 (content sink) :
 DOM 요소를 생성하는 공정
