--- a/content/posts/rendering_engine_1.mdx
+++ b/content/posts/rendering_engine_1.mdx
@@ -66,7 +66,7 @@ thumbnail: /images/2018/14/thumb_default.jpg
 
 - 어휘 분석기는 공백과 줄 바꿈 같은 의미 없는 문자를 제거한다.
 
-<img src="/images/2018/14/parsing.png" style="width: 100px" />
+<img src="/images/2018/14/parsing.png" style={{width: '100px'}} />
 
 - 파싱과정은 반복됨
 - 파서는 보통 어휘 분석기로부터 새 토큰을 받아서 구문 규칙과 일치하는지 확인 (언어 규칙들..)
@@ -81,7 +81,7 @@ thumbnail: /images/2018/14/thumb_default.jpg
 - 컴파일이 하나의 예가 된다.
 - 소스 코드를 기계 코드로 만드는 컴파일러는 **파싱 트리 생성 후 이를 기계 코드 문서로 변환한다!**
 
-<img src="/images/2018/14/compile.png" style="width: 100px" />
+<img src="/images/2018/14/compile.png" style={{width: '100px'}} />
 
 ### 1-4. 파싱 예
 
