--- a/content/posts/Async_01.mdx
+++ b/content/posts/Async_01.mdx
@@ -87,10 +87,10 @@ thumbnail: /images/2018/24/thumb_default.jpg
 입력데이터에 대한 구조적 문제를 개선하고자 하였다. rxjs는 동기와 비동기의 차이점을
 <span class="mint">**시간**</span>이라는 개념을 도입함으로써 해결하려고 했다.
 
-<img src="/images/2018/24/01.png" width="300px" style="margin-left: 0;" />
+<img src="/images/2018/24/01.png" width="300px" style={{marginLeft: '0'}} />
 > 비동기
 
-<img src="/images/2018/24/02.png" width="300px" style="margin-left: 0;" />
+<img src="/images/2018/24/02.png" width="300px" style={{marginLeft: '0'}} />
 > 동기
 
 동기와 비동기는 시간의 축으로 봤을 때는 같은 형태이다. => **시간을 인덱스로 둔 컬렉션으로 생각할 수
