--- a/content/posts/CSS_02.mdx
+++ b/content/posts/CSS_02.mdx
@@ -217,7 +217,7 @@ p {
   src="https://codesandbox.io/embed/cssfont-faceunicode-range-12k1k?fontsize=14"
   title="css_@font-face_unicode-range"
   allow="geolocation; microphone; camera; midi; vr; accelerometer; gyroscope; payment; ambient-light-sensor; encrypted-media; usb"
-  style="width:100%; height:500px; border:0; border-radius: 4px; overflow:hidden;"
+  style={{width: '100%', height: '500px', border: '0', borderRadius: '4px', overflow: 'hidden'}}
   sandbox="allow-modals allow-forms allow-popups allow-scripts allow-same-origin"
 ></iframe>
 
