--- a/content/posts/HTTP_012_01.mdx
+++ b/content/posts/HTTP_012_01.mdx
@@ -33,7 +33,7 @@ thumbnail: /images/2019/41/thumb_default.jpg
 
 ## TL;DR
 
-<img src="/images/2019/41/01.png" style="width:100%" />
+<img src="/images/2019/41/01.png" style={{width: '100%'}} />
 
 ---
 
